@@ -1,7 +1,6 @@
 - finish configuration utility (worked on by Kyoshiro, see list in ctrlproxy-setup)
 - automated testsuite
 - dcc module
-- Modules shouldn't be loaded twice (worked on by poelzi)
 - non-blocking connect
 - add member 'nick' to struct line
 - add more help data
