@@ -2,6 +2,8 @@
  	Jelmer Vernooij <jelmer@vernstok.nl>
 
 Ctrlproxy 2.7:
+ * Make sure modules are never loaded twice (Daniel Poelzleithner
+											 <ctrlproxy@poelzi.org>)
  * Support binding on a specific IP in socket module (Daniel Poelzleithner
 													  <ctrlproxy@poelzi.org>)
  * Add support for unloading crashing modules
